Init commit. Switch project to java 21